adds JS and CSS to create image carousel

--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+* {box-sizing:border-box}
+
 /* HTML */
 
 html {
@@ -160,14 +162,95 @@ header nav ul li a {
   transform: scale(0.95);
 }
 
-.portfolio-image-1 {
+/* CAROUSEL */
+
+/* Slideshow container */
+.carousel-container {
+  /* border: 1px solid black; */
+  max-width: 90%;
+  position: relative;
+  margin: auto;
+}
+
+/* Hide the images by default */
+.portfolio-image {
+  display: none;
+}
+
+img {
+  /* vertical-align: middle; */
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  /* transition: background-color 0.6s ease; */
+}
+
+.active, .dot:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
+
+/* USE THIS CSS IF YOU WANT A PHOTO GALLERY INSTEAD OF CAROUSEL */
+
+/* .portfolio-image-1 {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 200px;
   width: 200px;
   border-radius: 5px;
-  /* border: 1px solid black; */
   background-image: url("whittier-portfolio-image-1.jpg");
   background-size: cover;
   background-position: center center;
@@ -182,7 +265,6 @@ header nav ul li a {
   height: 200px;
   width: 200px;
   border-radius: 5px;
-  /* border: 1px solid black; */
   background-image: url("whittier-portfolio-image-2.jpg");
   background-size: cover;
   background-position: center center;
@@ -197,7 +279,6 @@ header nav ul li a {
   height: 200px;
   width: 200px;
   border-radius: 5px;
-  /* border: 1px solid black; */
   background-image: url("whittier-portfolio-image-3.jpg");
   background-size: cover;
   background-position: center center;
@@ -212,7 +293,6 @@ header nav ul li a {
   height: 200px;
   width: 200px;
   border-radius: 5px;
-  /* border: 1px solid black; */
   background-image: url("whittier-portfolio-image-4.jpg");
   background-size: cover;
   background-position: center center;
@@ -227,7 +307,6 @@ header nav ul li a {
   height: 200px;
   width: 200px;
   border-radius: 5px;
-  /* border: 1px solid black; */
   background-image: url("whittier-portfolio-image-5.jpg");
   background-size: cover;
   background-position: center center;
@@ -242,7 +321,6 @@ header nav ul li a {
   height: 200px;
   width: 200px;
   border-radius: 5px;
-  /* border: 1px solid black; */
   background-image: url("whittier-portfolio-image-6.jpg");
   background-size: cover;
   background-position: center center;
@@ -256,13 +334,12 @@ header nav ul li a {
   align-items: center;
   height: 200px;
   width: 200px;
-  /* border: 1px solid black; */
   background-image: url("whittier-portfolio-image-7.jpg");
   background-size: cover;
   background-position: center center;
   margin-top: 10px;
   margin-right: 10px;
-}
+} */
 
 /* CONTACT SECTION */
 
