--- a/style.css
+++ b/style.css
@@ -158,9 +158,10 @@ header nav ul li a {
   /* border: 2px solid red; */
 }
 
-#portfolio div:hover {
+/* USE WITH PHOTO GALLERY */
+/* #portfolio div:hover {
   transform: scale(0.95);
-}
+} */
 
 /* CAROUSEL */
 
