--- a/style.css
+++ b/style.css
@@ -11,14 +11,18 @@ html {
 /* BODY */
 
 .body {
-  background-image: url("whittier-background-image.jpg");
+  /* background-image: url("whittier-background-image.jpg");
   background-size: contain;
   background-position: center center;
   background-repeat: repeat;
   width: 100%;
   margin-left: 0px;
   margin-bottom: 0px;
-  margin-right: 0px;
+  margin-right: 0px; */
+  background: #FCCC95;
+  background: -webkit-linear-gradient(bottom, #FCCC95, #AE830A);
+  background: -moz-linear-gradient(bottom, #FCCC95, #AE830A);
+  background: linear-gradient(to top, #FCCC95, #AE830A);
 }
 
 /* Header */
@@ -95,6 +99,7 @@ header nav ul li a {
   width: 100%;
   font-family: "Source Sans Pro";
   color: white;
+  margin-bottom: 20px;
 }
 
 .about-group {
@@ -168,9 +173,11 @@ header nav ul li a {
 /* Slideshow container */
 .carousel-container {
   /* border: 1px solid black; */
-  max-width: 90%;
+  width: 70%;
   position: relative;
   margin: auto;
+  background-size: cover;
+  margin-top: 20px;
 }
 
 /* Hide the images by default */
@@ -180,6 +187,8 @@ header nav ul li a {
 
 img {
   vertical-align: middle;
+  height: 600px;
+  width: 90%;
 }
 
 /* Next & previous buttons */
@@ -219,6 +228,7 @@ img {
   border-radius: 50%;
   display: inline-block;
   /* transition: background-color 0.6s ease; */
+  margin-bottom: 30px;
 }
 
 .active, .dot:hover {
@@ -355,7 +365,7 @@ img {
 }
 
 #contact a:link {
-  color: lightskyblue;
+  color: black;
 }
 
 #contact a:hover {
@@ -474,11 +484,10 @@ footer {
   /* border: 1px solid black; */
   display: flex;
   justify-content: space-between;
-  background-color: #6b655b;
-  margin-top: 0px;
-  margin-bottom: 0px;
-  height: 40px;
-  width: 100%;
+  margin-top: 20px;
+  width: 100%; 
+  position: relative;
+  bottom: 0px;
 }
 
 .copyright {
@@ -487,6 +496,19 @@ footer {
 
 .greg {
   /* border: 1px solid black; */
+}
+
+.greg a:link {
+  text-decoration: none;
+}
+.greg a:visited {
+  text-decoration: none;
+}
+.greg a:hover {
+  text-decoration: none;
+}
+.greg a:active {
+  text-decoration: none;
 }
 
 footer p {
