--- a/style.css
+++ b/style.css
@@ -29,7 +29,12 @@ html {
 
 header {
   /* border: 2px solid pink; */
-  color: white;
+  color: black;
+  background-color: rgb(36, 65, 78);
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  right: 0px;
 }
 
 header .title {
@@ -57,7 +62,7 @@ header nav ul li {
 }
 
 header nav ul li a {
-  color: white;
+  color: black;
   text-decoration: none;
   padding: 0 20px 0 0;
   font-family: monospace;
@@ -92,10 +97,11 @@ header nav ul li a {
 
 /* ABOUT ME SECTION (MOBILE FIRST) */
 #about {
+  /* border: 3px solid black; */
   display: flex;
+  flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
-  /* border: 3px solid black; */
   width: 100%;
   font-family: "Source Sans Pro";
   color: white;
@@ -107,6 +113,8 @@ header nav ul li a {
   display: flex;
   flex-direction: column;
   width: 40%;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 .about-title {
@@ -129,6 +137,8 @@ header nav ul li a {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-top: 150px;
+  margin-bottom: 20px;
 }
 
 .about-image-name {
@@ -144,11 +154,13 @@ header nav ul li a {
 @media all and (min-width: 800px) {
   #about {
     width: 80%;
+    justify-content: space-between;
     margin: auto;
   }
 
   .about-image {
     width: 30%;
+    background-size: cover;
   }
 }
 
@@ -176,7 +188,7 @@ header nav ul li a {
   width: 70%;
   position: relative;
   margin: auto;
-  background-size: cover;
+  background-size: auto;
   margin-top: 20px;
 }
 
@@ -187,8 +199,9 @@ header nav ul li a {
 
 img {
   vertical-align: middle;
-  height: 600px;
-  width: 90%;
+  /* max-width: 100%;*/
+  height: 500px;
+  object-fit: contain;
 }
 
 /* Next & previous buttons */
@@ -228,7 +241,7 @@ img {
   border-radius: 50%;
   display: inline-block;
   /* transition: background-color 0.6s ease; */
-  margin-bottom: 30px;
+  margin-bottom: 70px;
 }
 
 .active, .dot:hover {
@@ -484,7 +497,7 @@ footer {
   /* border: 1px solid black; */
   display: flex;
   justify-content: space-between;
-  margin-top: 20px;
+  margin-top: 50px;
   width: 100%; 
   position: relative;
   bottom: 0px;
