--- a/style.css
+++ b/style.css
@@ -25,6 +25,10 @@ html {
   background: linear-gradient(to top, #FCCC95, #AE830A);
 }
 
+main {
+  margin-top: 50px;
+}
+
 /* Header */
 
 header {
@@ -74,7 +78,6 @@ header nav ul li a {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    /* background-color: ;*/
   }
 
   header .title {
@@ -137,7 +140,7 @@ header nav ul li a {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 150px;
+  margin-top: 100px;
   margin-bottom: 20px;
 }
 
