--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ main {
 
 header {
   /* border: 2px solid pink; */
-  color: black;
+  color: wheat;
   background-color: rgb(36, 65, 78);
   position: absolute;
   top: 0px;
@@ -66,7 +66,7 @@ header nav ul li {
 }
 
 header nav ul li a {
-  color: black;
+  color: wheat;
   text-decoration: none;
   padding: 0 20px 0 0;
   font-family: monospace;
@@ -122,7 +122,7 @@ header nav ul li a {
 
 .about-title {
   /* border: 2px solid green; */
-  text-align: center;`
+  text-align: center;
 }
 
 .explained {
@@ -136,12 +136,11 @@ header nav ul li a {
   background-size: cover;
   background-position: center center;
   height: 185px;
-  width: 40%;
+  width: 50%;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 100px;
-  margin-bottom: 20px;
+  margin-top: 150px;
 }
 
 .about-image-name {
@@ -159,11 +158,13 @@ header nav ul li a {
     width: 80%;
     justify-content: space-between;
     margin: auto;
+    margin
   }
 
   .about-image {
     width: 30%;
     background-size: cover;
+    margin-top: 100px;
   }
 }
 
@@ -192,7 +193,7 @@ header nav ul li a {
   position: relative;
   margin: auto;
   background-size: auto;
-  margin-top: 20px;
+  /* margin-top: 20px; */
 }
 
 /* Hide the images by default */
@@ -267,6 +268,12 @@ img {
 @keyframes fade {
   from {opacity: .4}
   to {opacity: 1}
+}
+
+@media all and (min-width: 800px) {
+  .dot {
+    margin-top: 10px;
+  }
 }
 
 /* USE THIS CSS IF YOU WANT A PHOTO GALLERY INSTEAD OF CAROUSEL */
@@ -381,7 +388,7 @@ img {
 }
 
 #contact a:link {
-  color: black;
+  color: rgb(36, 65, 78);
 }
 
 #contact a:hover {
@@ -416,7 +423,7 @@ img {
   /* border: 1px solid white; */
   text-align: center;
   margin-bottom: 5px;
-  color: white;
+  color: rgb(36, 65, 78);
 }
 
 .phone {
@@ -446,7 +453,7 @@ img {
   /* border: 1px solid white; */
   text-align: center;
   margin-bottom: 5px;
-  color: white;
+  color: rgb(36, 65, 78);
 }
 
 .facebook {
@@ -478,7 +485,7 @@ img {
   /* border: 1px solid white; */
   text-align: center;
   margin-bottom: 5px;
-  color: white;
+  color: rgb(36, 65, 78);
 }
 
 @media all and (min-width: 800px) {
@@ -528,7 +535,7 @@ footer {
 }
 
 footer p {
-  color: black;
+  color: rgb(36, 65, 78);
   text-align: center;
   font-size: 12px;
 }
