--- a/style.css
+++ b/style.css
@@ -157,8 +157,7 @@ header nav ul li a {
   #about {
     width: 80%;
     justify-content: space-between;
-    margin: auto;
-    margin
+    margin: auto;    
   }
 
   .about-image {
@@ -240,7 +239,7 @@ img {
   cursor: pointer;
   height: 15px;
   width: 15px;
-  margin: 0 2px;
+  margin: 3px 2px;
   background-color: #bbb;
   border-radius: 50%;
   display: inline-block;
@@ -271,6 +270,10 @@ img {
 }
 
 @media all and (min-width: 800px) {
+  .carousel-container {
+    margin-top: 60px;
+  }
+
   .dot {
     margin-top: 10px;
   }
